--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description"content="Web site created using create-react-app"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+     <link rel = "icon" href = 
+      "https://simg.nicepng.com/png/small/263-2635963_admin-png.png" 
+        type = "image/x-icon">
     <title>Dikshant Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div> <!-- In index.js we cannot the app with div with the id of root --> 
+    <div id="root"></div> 
   </body>
 </html>
